// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series properly 1`] = `
.c4 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c2 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c2 .IconPlus-s1uyfpws-0 {
  margin: 0 20px;
}

.c2 .c3 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c5 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c5 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c22 {
  margin: 10px 20px 0 0;
}

.c22::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c15 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c20 {
  width: 32px;
  height: 32px;
}

.c18 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c16 {
  position: relative;
  height: inherit;
  background: white;
}

.c14 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c14 .c17 {
  opacity: 1;
}

.c14:hover .c17 {
  opacity: 0.7;
}

.c19 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c19 svg {
  height: 40px;
}

.c6 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c7 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c8 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c23 {
  position: relative;
  width: 100%;
  color: white;
}

.c23 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,white 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c23 a:hover {
  color: white;
  opacity: .65;
}

.c23 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c23 p,
.c23 ul,
.c23 ol,
.c23 .paragraph,
.c23 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c23 p:first-child,
.c23 .paragraph:first-child,
.c23 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c23 p:last-child,
.c23 .paragraph:last-child,
.c23 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c23 ul,
.c23 ol {
  padding-left: 1em;
}

.c23 ul {
  list-style: disc;
}

.c23 ol {
  list-style: decimal;
}

.c23 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c23 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c23 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c23 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c23 h2 a {
  background-size: 1.25px 1px;
}

.c23 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c23 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c23 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c23 h3 a {
  background-size: 1.25px 1px;
}

.c23 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c23 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c23 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c23 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c23 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c12 {
  color: white;
  text-align: center;
}

.c12 .PartnerBlock__ImageContainer-ydgi2-1 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c12 .PartnerBlock__ImageContainer-ydgi2-1 img {
  margin-left: auto;
  margin-right: auto;
}

.c13 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.c10 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c10 .c11 {
  margin-bottom: 90px;
}

.c0 {
  color: white;
}

.c0 .c9 {
  padding: 90px 20px 150px;
}

@media (max-width:720px) {
  .c2 img {
    max-height: 24px;
  }

  .c2 .c3 {
    font-size: 24px;
  }

  .c2 .IconPlus-s1uyfpws-0 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c19 svg {
    height: 30px;
  }
}

@media (max-width:600px) {
  .c23 p,
  .c23 ul,
  .c23 ol,
  .c23 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c23 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c23 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c23 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c23 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c23 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c23 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c23 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c12 .PartnerBlock__ImageContainer-ydgi2-1 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c13 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 sc-ifAKCX htzdbN"
      color="white"
    >
      <div
        className="PartnerInline c2"
      >
        <a
          href="/"
        >
          <div
            className="c3 c4"
          >
            
          </div>
        </a>
        
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c5 sc-gzVnrw ibZhkv sc-EHOje iUzFQL"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    />
    <div
      className="c8"
    />
  </div>
  <div
    className="c9 c10"
  >
    <div
      className="SeriesTitle c11 c12"
      color="white"
    >
      <div
        className="c13"
      >
        The Future of Art
      </div>
    </div>
    <div
      className="sc-kAzzGY cPeMMC"
      color="white"
    >
      <div
        className="sc-kAzzGY iBAmpz"
      >
        <a
          className="ArticleCard c14"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="sc-ifAKCX kXtlsF"
          >
            <div
              className="sc-ifAKCX jiYvGF"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje cpSHOt"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje dmUTBA"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="sc-gzVnrw ibZhkv sc-EHOje lhPpoe"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c15"
              >
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c16 sc-kAzzGY iqiPK"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c17 c18"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c19 sc-ifAKCX ifRBhy"
              >
                <svg
                  className="c20"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje bZsSMq"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="sc-kAzzGY iBAmpz"
      >
        <a
          className="ArticleCard c14"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="sc-ifAKCX kXtlsF"
          >
            <div
              className="sc-ifAKCX jiYvGF"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje cpSHOt"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje dmUTBA"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="sc-gzVnrw ibZhkv sc-EHOje lhPpoe"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c21"
                color="white"
              >
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c22"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c15"
                >
                  <div
                    className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c16 sc-kAzzGY iqiPK"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c17 c18"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="sc-kAzzGY bCdiKa"
    >
      <div
        className="sc-ifAKCX dYrUUk"
        color="white"
        width="100%"
      >
        <div
          className="sc-ifAKCX kwmuuS"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div
            className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize="28px"
          >
            About the Series
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          />
        </div>
        <div
          className="sc-ifAKCX gkTgYS"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c23"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a sponsored series properly 1`] = `
.c4 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  position: relative;
  color: white;
}

.c6 {
  width: 15px;
  height: 15px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c2 img {
  max-height: 34px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c2 .c5 {
  margin: 0 20px;
}

.c2 .c3 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: relative;
  height: 52px;
  width: 100%;
  z-index: 10;
  position: absolute;
  top: 0;
}

.c7 {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: white;
}

.c7 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  z-index: 10;
}

.c28 {
  margin: 10px 20px 0 0;
}

.c28::before {
  content: "";
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 0 5px 1px 0;
  background-color: white;
}

.c21 {
  margin: 5px 20px 0 0;
  white-space: nowrap;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  color: white;
}

.c26 {
  width: 32px;
  height: 32px;
}

.c24 {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  -webkit-transition: opacity 0.15s;
  transition: opacity 0.15s;
  display: block;
}

.c22 {
  position: relative;
  height: inherit;
  background: white;
}

.c20 {
  border: 1px solid;
  border-radius: 2px;
  color: white;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.c20 .c23 {
  opacity: 1;
}

.c20:hover .c23 {
  opacity: 0.7;
}

.c25 {
  position: absolute;
  left: 20px;
  right: 20px;
  bottom: 20px;
}

.c25 svg {
  height: 40px;
}

.c8 {
  background-color: #000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c9 {
  background-image: url(https://artsy-media-uploads.s3.amazonaws.com/GXvnaBYBdP2z6LKIBQF7XA%2FArtboard.jpg);
  background-size: cover;
  background-position: 50%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -2;
}

.c10 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.c16 {
  display: block;
}

.c19 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c17 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c29 {
  position: relative;
  width: 100%;
  color: white;
}

.c29 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,white 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c29 a:hover {
  color: white;
  opacity: .65;
}

.c29 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c29 p,
.c29 ul,
.c29 ol,
.c29 .paragraph,
.c29 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c29 p:first-child,
.c29 .paragraph:first-child,
.c29 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c29 p:last-child,
.c29 .paragraph:last-child,
.c29 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c29 ul,
.c29 ol {
  padding-left: 1em;
}

.c29 ul {
  list-style: disc;
}

.c29 ol {
  list-style: decimal;
}

.c29 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c29 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c29 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c29 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c29 h2 a {
  background-size: 1.25px 1px;
}

.c29 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c29 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c29 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c29 h3 a {
  background-size: 1.25px 1px;
}

.c29 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c29 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: white;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c29 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c29 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c29 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c14 {
  color: white;
  text-align: center;
}

.c14 .c18 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c14 .c18 img {
  margin-left: auto;
  margin-right: auto;
}

.c15 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 120px;
  line-height: 1.1em;
  margin-bottom: 30px;
}

.bhMdnS .c13 {
  margin-bottom: 90px;
}

.c12 {
  max-width: 1200px;
  min-height: 100vh;
  margin: 0 auto;
}

.c12 .c13 {
  margin-bottom: 60px;
}

.c0 {
  color: white;
}

.c0 .c11 {
  padding: 90px 20px 150px;
}

@media (max-width:900px) {
  .c6 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c2 img {
    max-height: 24px;
  }

  .c2 .c3 {
    font-size: 24px;
  }

  .c2 .c5 {
    margin: 0 10px;
  }
}

@media (max-width:900px) {
  .c25 svg {
    height: 30px;
  }
}

@media (max-width:720px) {
  .c17 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c29 p,
  .c29 ul,
  .c29 ol,
  .c29 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c29 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c29 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c29 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c29 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c29 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c29 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c29 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c14 .c18 {
    padding-bottom: 0;
  }
}

@media (max-width:900px) {
  .c15 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 65px;
    line-height: 1em;
    margin-bottom: 20px;
  }
}

<div
  className="c0"
  color="white"
>
  <div>
    <div
      className="c1 sc-ifAKCX htzdbN"
      color="white"
    >
      <div
        className="PartnerInline c2"
      >
        <a
          href="/"
        >
          <div
            className="c3 c4"
          >
            
          </div>
        </a>
        <svg
          className="c5 c6"
          version="1.1"
          viewBox="0 0 15 15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            stroke="none"
            strokeWidth="2"
          >
            <g
              fill="white"
              transform="translate(-101.000000, -18.000000)"
            >
              <g
                transform="translate(101.000000, 18.000000)"
              >
                <rect
                  height="1"
                  width="15"
                  x="0"
                  y="7"
                />
                <rect
                  height="1"
                  transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
                  width="15"
                  x="0"
                  y="7"
                />
              </g>
            </g>
          </g>
        </svg>
        <a
          href="http://artsy.net"
          onClick={[Function]}
          target="_blank"
        >
          <img
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
          />
        </a>
      </div>
      <div
        className="rrm-container rrm-greaterThan-xs"
      >
        <div
          className="c7 sc-gzVnrw ibZhkv sc-EHOje iUzFQL"
          color="white"
          fontFamily={
            Object {
              "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
              "fontWeight": 600,
            }
          }
          fontSize="22px"
        >
          <a
            href="/magazine"
          >
            Artsy Editorial
          </a>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "fontSize": 0,
        }
      }
    />
  </div>
  <div
    className="c8"
  >
    <div
      className="c9"
    />
    <div
      className="c10"
    />
  </div>
  <div
    className="c11 c12"
  >
    <div
      className="SeriesTitle c13 c14"
      color="white"
    >
      <div
        className="c15"
      >
        The Future of Art
      </div>
      <div
        className="PartnerBlock c16"
      >
        <div
          className="c17"
        >
          Presented in Partnership with
        </div>
        <div
          className="c18 c19"
        >
          <a
            href="http://artsy.net"
            onClick={[Function]}
            target="_blank"
          >
            <img
              src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
            />
          </a>
        </div>
      </div>
    </div>
    <div
      className="sc-kAzzGY cPeMMC"
      color="white"
    >
      <div
        className="sc-kAzzGY iBAmpz"
      >
        <a
          className="ArticleCard c20"
          color="white"
          href="joanne-artman-gallery-poetry-naturerefinement-form"
          onClick={[Function]}
        >
          <div
            className="sc-ifAKCX kXtlsF"
          >
            <div
              className="sc-ifAKCX jiYvGF"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje cpSHOt"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje dmUTBA"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New Study Shows the Gender Pay Gap for Artists Is Not So Simple
                </div>
                <div
                  className="sc-gzVnrw ibZhkv sc-EHOje lhPpoe"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
                </div>
              </div>
              <div
                className="c21"
              >
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  Aug 28, 2017
                </div>
              </div>
            </div>
            <div
              className="c22 sc-kAzzGY iqiPK"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c23 c24"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FwHFgQlrTrHav5O6bQRJ0dg%252FUntitled%2BSuspended_30x67x33%2B%25282%2529_sm%2Bcropped.jpg&width=680&height=450&quality=95"
              />
              <div
                className="c25 sc-ifAKCX ifRBhy"
              >
                <svg
                  className="c26"
                  version="1.1"
                  viewBox="0 0 40 56"
                  x="0px"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <polygon
                      fill="white"
                      points="0 0 0 56 39.3600006 28"
                    />
                  </g>
                </svg>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje bZsSMq"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  02:28
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        className="sc-kAzzGY iBAmpz"
      >
        <a
          className="ArticleCard c20"
          color="white"
          href="new-yorks-next-art-district"
          onClick={[Function]}
        >
          <div
            className="sc-ifAKCX kXtlsF"
          >
            <div
              className="sc-ifAKCX jiYvGF"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje cpSHOt"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  The Future of Art
                </div>
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje dmUTBA"
                  fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                  fontSize={
                    Array [
                      "28px",
                      "28px",
                      "42px",
                      "42px",
                    ]
                  }
                >
                  New York's Next Art District
                </div>
                <div
                  className="sc-gzVnrw ibZhkv sc-EHOje lhPpoe"
                  fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
                  fontSize={
                    Array [
                      "18px",
                      "18px",
                      "22px",
                      "22px",
                    ]
                  }
                >
                  Land exhibitions, make influential contacts, and gain valuable feedback about your work.
                </div>
              </div>
              <div
                className="Byline c27"
                color="white"
              >
                <div
                  className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                  fontFamily={
                    Object {
                      "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                      "fontWeight": 500,
                    }
                  }
                  fontSize="14px"
                >
                  <div
                    className="c28"
                    color="white"
                  >
                    Casey Lesser
                  </div>
                </div>
                <div
                  className="c21"
                >
                  <div
                    className="sc-bZQynM bOrPFB sc-EHOje fXsUty"
                    fontFamily={
                      Object {
                        "fontFamily": "Unica77LLWebMedium, 'Helvetica Neue', Helvetica, Arial, sans-serif",
                        "fontWeight": 500,
                      }
                    }
                    fontSize="14px"
                  >
                    May 19, 2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="c22 sc-kAzzGY iqiPK"
              width={
                Array [
                  "100%",
                  "100%",
                  "50%",
                  "50%",
                ]
              }
            >
              <img
                className="c23 c24"
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fill&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2F7lsxxsw0qPAuKl37jEYitw%252Farticle%2Basset%2B1-hig%2Bres%2Bcopy.jpg&width=680&height=450&quality=95"
              />
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="sc-kAzzGY bCdiKa"
    >
      <div
        className="sc-ifAKCX dYrUUk"
        color="white"
        width="100%"
      >
        <div
          className="sc-ifAKCX kwmuuS"
          width={
            Array [
              1,
              1,
              0.3333333333333333,
              0.3333333333333333,
            ]
          }
        >
          <div
            className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
            fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
            fontSize="28px"
          >
            About the Series
          </div>
          <div
            className="rrm-container rrm-greaterThanOrEqual-md"
          >
            <div
              className="sc-kAzzGY fBsJru"
            >
              <div
                className="PartnerBlock c16"
              >
                <div
                  className="c17"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c18 c19"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX gkTgYS"
          width={
            Array [
              1,
              1,
              0.6666666666666666,
              0.6666666666666666,
            ]
          }
        >
          <div
            className="SeriesAbout__description"
          >
            <div
              className="article__text-section c29"
              color="white"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="rrm-container rrm-lessThan-md"
          >
            <div
              className="sc-kAzzGY duZrZH"
            >
              <div
                className="PartnerBlock c16"
              >
                <div
                  className="c17"
                >
                  Presented in Partnership with
                </div>
                <div
                  className="c18 c19"
                >
                  <a
                    href="http://artsy.net"
                    onClick={[Function]}
                    target="_blank"
                  >
                    <img
                      src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
